layout issues fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,10 @@ body {
   color: black;
 }
 
+.nav-margin {
+  height: 130px;
+}
+
 /************** Messages Display **************/
 
 .displayed-username,
